--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@/store/*":["./store/*"],
       "@/interfaces/*":["./app/interfaces/*"],
       "@/hooks/*":["./hooks/*"],
-      "@/utils/*":["./utils/*"]
+      "@/utils/*":["./utils/*"],
+      "@/handlers/*":["./handlers/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
