--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.1.0",
     "lucide-react": "^0.468.0",
