--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "autoprefixer": "10.4.20",
@@ -29,9 +29,9 @@
     "dompurify": "^3.2.4",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.1.0",
-    "lucide-react": "^0.487.0",
-    "next": "^15.3.0",
-    "next-themes": "^0.4.6",
+    "lucide-react": "^0.468.0",
+    "next": "latest",
+    "next-themes": "^0.4.3",
     "obscenity": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0",
@@ -41,12 +41,12 @@
   },
   "devDependencies": {
     "@types/node": "22.10.2",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
     "postcss": "8.4.49",
     "supabase": "2.15.8",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2"
   }
